--- a/style.css
+++ b/style.css
@@ -1,31 +1,85 @@
-html {
-    box-sizing:border-box ;
-    background-color: bisque;
-}
+
 body{
   display: flex;
   justify-content: center;
+  background-color: bisque;
 }
 .card {/* 10:17 */
-  width: 100%;
+  width: 95%;
   aspect-ratio: 16/9;
   perspective: 1000px; 
   position: relative;
 }
-.card div {
+.card .front,
+.card .back {
   width: 100%;
   height: 100%;
   position: absolute;
   backface-visibility: hidden; /* 背面隱藏 */
   transition: transform 0.8s;
 }
-.front { background: lightblue; }
+.front { 
+    background: rgb(124, 103, 79); 
+}
+.top {
+    border-radius: 10px 10px 0 0;
+    height: 8%; 
+    background-color: cadetblue; 
+}
+.mycontent { 
+    height: 88%;
+    width: 70%;
+    background-color: bisque;
+    top: 8%;
+    position: fixed;
+    left: 30%;
+}
+.Position{
+    height: 10%;
+    background-color: rgb(117, 112, 79);
+    font-size:medium ;   
+}
+.Name{
+    height: 35%;
+    background-color: rgb(176, 211, 212);
+    text-align: center;
+    font-size:95px;
+}
+.Expertise{
+    height: 20%;
+    background-color: cadetblue;
+    font-size:small;
+}
+.Education{
+    height: 20%;
+    background-color: rgb(155, 111, 155);
+    text-align: right;
+    font-size:x-small;
+}
+.Contact{
+    height: 15%;
+    background-color: rgb(131, 201, 128);
+    font-size:small;
+}
+.down { 
+    border-radius: 0 0 5px 5px;
+    height: 4%; 
+    width: 100%;
+    background-color: azure;
+    position: fixed;
+    bottom: 0%;
+    
+}
 .back {
-  background: lightcoral;
+  background: rgb(248, 235, 215);
   transform: rotateY(180deg);
 }
 @media screen and (max-width:480px){
     .card{
         aspect-ratio: 9/16;
+    }
+    .mycontent { 
+    width: 100%;
+    left: 0%;
     }
 }
