--- a/style.css
+++ b/style.css
@@ -19,58 +19,63 @@ body{
   transition: transform 0.8s;
 }
 .front { 
-    background: rgb(124, 103, 79); 
+    background-image: url("./image/main_img.png");
+    background-size: 29.99% 89%;
+    background-repeat: no-repeat;
+  background-position-y: 65%;
 }
 .top {
     border-radius: 10px 10px 0 0;
+    background-image: url("./image/top.png");
+    background-size: 180vh 7.5vh ;
     height: 8%; 
-    background-color: cadetblue; 
+
 }
 .mycontent { 
     height: 88%;
     width: 70%;
-    background-color: bisque;
+    background-image: url("./image/content.png");
+    background-size: 95%;
+    background-color: rgb(255, 255, 255);
     top: 8%;
     position: fixed;
     left: 30%;
 }
 .Position{
     height: 10%;
-    background-color: rgb(117, 112, 79);
     font-size:4.5vh;   
 }
 .Position p{ margin: auto;}
 .Name{
     height: 35%;
-    background-color: rgb(176, 211, 212);
     text-align: center;
     font-size: 18vh;
 }
 .Expertise{
     height: 20%;
-    background-color: cadetblue;
     font-size:2.7vh;
 }
+.Expertise{ margin-left: 2.5vh;}
 .Education{
     height: 20%;
-    background-color: rgb(155, 111, 155);
     text-align: right;
     font-size:2.7vh;
 }
 .Education p{margin: auto; }
 .E_history{ text-align: left; width: 50%;position: fixed; left: 65%;}
 .Contact{
+    background-image: url("./image/connect.png");
     height: 15%;
-    background-color: rgb(131, 201, 128);
     font-size:3vh;
     text-align: center;
 }
 .Contact i{font-size: 3vh;}
 .down { 
+    background-image: url("./image/bottom.png");
+    background-size: 100vh 50vh;
     border-radius: 0 0 5px 5px;
     height: 4%; 
     width: 100%;
-    background-color: azure;
     position: fixed;
     bottom: 0%;
     
