--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ position: fixed;
     color: chocolate;
     border-radius: 50px;
     border-width: 5px;
-    border-style: solid solid dotted dotted  ;
+    border-style: solid solid dotted dashed  ;
     margin-top: 5%;
 }
 #Introdution h3{color: #000000;font-weight: bolder;margin-left: 38%}
@@ -173,8 +173,73 @@ position: fixed;
  background-size: 100% 100%;
  background-repeat: no-repeat;
   transform: rotateY(180deg);
+  padding: 2.5% 5% 2.5% 5%;
 }
 .backFlip{transform: rotateY(360deg);}
+.Myitem{
+    width: 100%;
+    height: 20%;
+    padding: 3%;
+}
+.workname{
+    background-color: #FFC000;
+    width: 60%;
+    height: fit-content;
+    font-size: 5vh;
+    position: relative;
+    display: inline-block;
+    border-radius: 15px;
+    text-align: end;
+}
+.nowWork{ margin: 1.5%; cursor: pointer; padding-right: 3%;}
+.dropdown{
+    margin-left: 5%;
+    position: absolute;
+    width: 90%;
+    height: 25vh;
+    font-size: 3vh;
+    background-color: beige;
+    overflow-y:auto;
+    display: none;
+}
+.dropdown p{
+    width: 100%;
+    height: auto;
+    padding: 2%;
+    margin: auto;
+    cursor: pointer;
+}
+.dropdown p:hover{
+    background-color: rgb(238, 238, 154);
+}
+.MyWork{
+    background-color: #F8CBAD;
+    width: 100%;
+    height:73%;
+    border-radius:25px;
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+}
+.int_text{
+    background-color: rgb(221, 144, 42);
+    width: 70%;
+}
+.int_img{
+     background-color: rgb(42, 221, 123);
+     width: 30%;
+}
+#d01{
+    position: fixed;
+    width: 13%;
+    bottom: -0.5%;
+    left: -0.2%;
+}
+#d02{
+    position: fixed;
+    width: 15%;
+    top: 0;
+}
 @media (max-width:480px){
     body{
         background-color: rgb(247, 241, 234);
@@ -258,5 +323,40 @@ position: fixed;
     #Introdution div{width: 95%; margin-left: 2.5%;padding: 3%; background-color: rgba(253, 253, 253, 0.795);color: #000000;font-size: medium;}
     .back{
         background-image: url("./image/back.png");
+    }
+    .Myitem{
+        margin-top: 5%;
+        height: fit-content;
+    }
+    .workname{
+        margin-left: 5%;
+        width: 90%;
+        font-size: 4vh;
+    }
+    .MyWork{
+        height:80%;
+        display:block;
+        padding: 5%;
+    }
+    .int_text{
+        width: 81%;
+        height: 53%;
+        bottom: 10%;
+        position: fixed;
+    }
+    .int_img{
+        width: 100%;
+        height: 27%;
+        top: 0%;
+    }
+    #d01{
+    position: fixed;
+    width: 30%;
+    bottom: 0%;
+    left: 1%;
+    }
+    #d02{
+    width: 25%;
+        top:2%;
     }
 }
