--- a/style.css
+++ b/style.css
@@ -222,12 +222,51 @@ position: fixed;
     padding: 2%;
 }
 .int_text{
-    background-color: rgb(221, 144, 42);
-    width: 70%;
+    background-color: #ffffffb2;
+    box-shadow:0 0 25px 10px rgb(255, 255, 255);
+    width: 65%;
+    border-radius:25px;
+    transform:scale(.90);
+    padding: 2%;
+    overflow-y: auto;
+    font-size: 3vh;
 }
 .int_img{
-     background-color: rgb(42, 221, 123);
-     width: 30%;
+     width: 35%;
+     height: 40vh;
+    margin-top: 5%;   
+    background-color: #ff7300;
+    border-radius:  10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+}
+.nowShow{
+    width: 95%;
+    aspect-ratio: 2/1;
+    display: none;
+}
+.allimage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+    margin-bottom: 3%;
+}
+.allimage img{ 
+    width: 30%; 
+    aspect-ratio: 2/1; 
+    border-radius: 2px;
+    margin: 1%;
+    cursor: pointer;
+    position:relative;
+    bottom: 0;
+}
+.whiteBorder{
+    border-style: solid;
+    border-color: aliceblue;
+    border-width: 3px;
 }
 #d01{
     position: fixed;
@@ -340,16 +379,19 @@ position: fixed;
     }
     .int_text{
         width: 81%;
-        height: 53%;
+        height: 50%;
         bottom: 10%;
         position: fixed;
+        font-size: larger;
     }
     .int_img{
         width: 100%;
-        height: 27%;
-        top: 0%;
+        height: 30%;
+        margin-top: 0;
     }
-    #d01{
+    .nowShow{margin-bottom: 2%; height: 88%;}
+    .allimage{display: none;}
+     #d01{
     position: fixed;
     width: 30%;
     bottom: 0%;
@@ -359,4 +401,6 @@ position: fixed;
     width: 25%;
         top:2%;
     }
+
 }
+   
