--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body::-webkit-scrollbar{display: none;}
 body{
   display: flex;
   justify-content: center;
+  vertical-align: middle;
   background-color: bisque;
 }
 .ch_point
@@ -32,7 +33,8 @@ position: fixed;
     background-image: url("./image/main_img.png");
     background-size: 29.99% 89%;
     background-repeat: no-repeat;
-  background-position-y: 65%;
+    background-position-y: 65%;
+    transform: rotateY(0deg);
 }
 .frontFlip{transform: rotateY(180deg);}
 .top {
@@ -178,8 +180,8 @@ position: fixed;
  background-position: 50%;
  background-size: 100% 100%;
  background-repeat: no-repeat;
-  transform: rotateY(180deg);
-  padding: 2.5% 5% 2.5% 5%;
+ transform: rotateY(180deg);
+ padding: 2.5% 5% 2.5% 5%;
 }
 .backFlip{transform: rotateY(360deg);}
 .Myitem{
